# flutter-pre-commit

./: .pre-commit-hooks.yaml  README.md  setup.cfg
src/: analyzer.py  formatter.py  test_runner.py
