[metadata]
name = flutter_pre_commit
version = 1.0.0
description = Flutter pre-commit hooks
author = Mike
author_email = 46599231+mikekael@users.noreply.github.com

[options]
packages =
  flutter_pre_commit
package_dir =
  flutter_pre_commit = src
python_requires = >=3.8

[options.entry_points]
console_scripts =
  formatter=flutter_pre_commit.formatter:main
  test_runner=flutter_pre_commit.test_runner:main
  analyzer=flutter_pre_commit.analyzer:main
